--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/fashion.css">
+    <link rel="stylesheet" href="fashion.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -37,10 +37,10 @@
 
         </div>
         <div id="services">
-            <div><a href="/f1.html" target="_blank">Login/Register</a></div>
-            <img src="/search.svg" alt="#">
-            <img src="/heart.svg" alt="#">
-            <img src="/handbag.svg" alt="#">
+            <div><a href="f1.html" target="_blank">Login/Register</a></div>
+            <img src="search.svg" alt="#">
+            <img src="heart.svg" alt="#">
+            <img src="handbag.svg" alt="#">
         </div>
     </header>
     <section>
