--- a/f1.html
+++ b/f1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms</title>
-    <link rel="stylesheet" href="/f1.css">
+    <link rel="stylesheet" href="f1.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <p >By clicking the Sign Up button,you agree to our</p>
        <div class="pp"> <a href="#" >Terms and Condition</a><span> and</span> <a href="#">Policy privacy</a>
     </div></div>
-    <div class="who"><span>Already have an account?</span><a href="/login.html" id="ann" >Login here</a></div>
+    <div class="who"><span>Already have an account?</span><a href="login.html" id="ann" >Login here</a></div>
 </body>
 
 </html>
