--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="/login.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
   <div id="lf">
@@ -22,6 +22,6 @@
     <button>Submit</button>
   </div></form>
 </div>
-<p class="wh">Not have an account?<a href="/f1.html" class="alt">Sign Up Here</a></p>
+<p class="wh">Not have an account?<a href="f1.html" class="alt">Sign Up Here</a></p>
 </body>
 </html>
